# patchy

./: Cargo.toml  README.md
src/: hash.rs  lib.rs  main.rs  patchy.rs  rolling_hash.rs  test.rs
