[package]
name = "patchy"
version = "0.0.4"
authors = ["Yuriy O'Donnell <yuriyo@gmail.com>"]
edition = "2018"
repository = "https://github.com/kayru/patchy"
description = "Binary patching tool"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.31"
bincode = "1.2.1"
blake3 = "0.3.4"
clap = "2.33.1"
memmap = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.5.2"
